[tool.poetry]
name = "learning-project"
version = "0.1.0"
description = ""
authors = ["The Stygian Architect <thestygianarchitect@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.0"
pycodestyle = "^2.5"
pydocstyle = "^3.0"
pylint = "^2.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
